Junit Tests implemented